[package]
name = "wql-nom"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Crate to parse WQL using parse combinators"
readme = "README.md"
documentation = "https://github.com/naomijub/wql-nom/blob/main/README.md"
repository = "https://github.com/naomijub/wql-noml"
keywords = ["wql", "query", "language", "wooridb"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0.121", features = ["derive"] }
bcrypt = "0.8"
chrono = { version = "0.4.19", features = ["serde"] }